# MPRPC

./: README.md  autobuild.sh
example/: CMakeLists.txt  callUserService.cc  userService.cc
lib/include/: logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  zookeeperutil.h
src/: CMakeLists.txt  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcheader.pb.cc  mprpcheader.proto  mprpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  mprpccontroller.h  mprpcheader.pb.h  mprpcprovider.h
